# school_of_solana_tasks

./: LICENSE  README.md
program/: PROJECT_DESCRIPTION.md
program/anchor_project/: Anchor.toml  Cargo.toml  package-lock.json  package.json
program/anchor_project/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
program/anchor_project/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1763760189957177  MANIFEST-000021
program/anchor_project/migrations/: deploy.js
program/anchor_project/programs/coffee_exchange/: Cargo.toml
program/anchor_project/programs/coffee_exchange/src/: lib.rs
program/anchor_project/programs/coffee_exchange/src/instructions/: make_offer.rs  mod.rs  shared.rs  take_offer.rs
program/anchor_project/programs/coffee_exchange/src/state/: mod.rs
program/anchor_project/tests/: coffee_exchange.test.ts
program/anchor_project/trident-tests/: Trident.toml
program/anchor_project/trident-tests/fuzz_0/: fuzz_accounts.rs  types.rs
program/anchor_project/trident-tests/fuzz_0/instructions/: make_offer.rs  mod.rs  take_offer.rs
program/anchor_project/trident-tests/fuzz_0/transactions/: make_offer.rs  take_offer.rs
program/frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
program/frontend/src/: App.tsx  index.css  main.tsx
program/frontend/src/components/: wallet-connect-button.tsx
(+8 files in other folders)
