[package]
name = "coffee_exchange"
version = "0.1.0"
description = "Coffee Exchange program for School of Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coffee_exchange"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features=["init-if-needed"]}
anchor-spl = "0.31.1"

